--- a/app/src/main/res/layout/fragment_add_todo.xml
+++ b/app/src/main/res/layout/fragment_add_todo.xml
@@ -32,6 +32,7 @@
                 android:layout_height="50dp"
                 android:ems="10"
                 android:hint="Title"
+                android:text="@={viewModel.inputTitle}"
                 android:inputType="textPersonName"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -43,7 +44,8 @@
                 android:layout_marginTop="14dp"
                 android:ems="10"
                 android:hint="Priority"
-                android:inputType="textPersonName"
+                android:text="@={viewModel.inputPriority}"
+                android:inputType="phone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,6 +54,7 @@
                 android:layout_height="50dp"
                 android:text="Add Todo"
                 android:layout_marginTop="10dp"
+                android:onClick="@{()->viewModel.addHandler()}"
                 />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
