--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -13,7 +13,7 @@
         <action
             android:id="@+id/action_homeFragment_to_addTodoFragment"
             app:destination="@id/addTodoFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@anim/nav_default_enter_anim" />
     </fragment>
     <fragment
         android:id="@+id/addTodoFragment"
