--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main">#03A9F5</color>
+    <color name="secondary">#0288D1</color>
+    <color name="low_gray">#BDBDBD</color>
 </resources>
