--- a/app/src/main/res/drawable/row_item_background.xml
+++ b/app/src/main/res/drawable/row_item_background.xml
@@ -1,41 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item>
-        <shape android:shape="rectangle" >
-            <solid android:color="@color/white" />
-        </shape>
-    </item>
+    <item android:drawable="@drawable/row_item_selector" />
 
     <item android:top="-2dp" android:right="-2dp" android:left="-2dp">
         <shape>
             <solid android:color="@android:color/transparent" />
             <stroke
                 android:width="1dp"
-                android:color="#ababb2" />
+                android:color="@color/mid_gray" />
         </shape>
     </item>
-
-    <!--    <item android:state_pressed="false">-->
-<!--        <shape android:shape="rectangle">-->
-<!--            <solid android:color="@color/white" />-->
-<!--        </shape>-->
-<!--        <shape android:shape="line" >-->
-<!--            <padding android:bottom="1dp" />-->
-
-<!--            <stroke-->
-<!--                android:dashGap="10px"-->
-<!--                android:dashWidth="10px"-->
-<!--                android:width="1dp"-->
-<!--                android:color="#000000" />-->
-<!--        </shape>-->
-<!--    </item>-->
-
-<!--    <item android:state_pressed="true">-->
-<!--        <shape>-->
-<!--            <solid android:color="@color/white" />-->
-<!--            <corners android:radius="10dp" />-->
-<!--            <stroke android:color="@color/low_gray" android:width="1dp" />-->
-<!--        </shape>-->
-<!--    </item>-->
 </layer-list>
