--- a/app/src/main/res/layout/fragment_add_todo.xml
+++ b/app/src/main/res/layout/fragment_add_todo.xml
@@ -18,10 +18,11 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
             android:padding="20dp"
-            android:layout_marginTop="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -32,8 +33,8 @@
                 android:layout_height="50dp"
                 android:ems="10"
                 android:hint="Title"
-                android:text="@={viewModel.inputTitle}"
                 android:inputType="textPersonName"
+                android:text="@={viewModel.inputTitle}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,18 +45,17 @@
                 android:layout_marginTop="14dp"
                 android:ems="10"
                 android:hint="Priority"
-                android:text="@={viewModel.inputPriority}"
                 android:inputType="phone"
+                android:text="@={viewModel.inputPriority}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="Add Todo"
                 android:layout_marginTop="10dp"
                 android:onClick="@{()->viewModel.addHandler()}"
-                />
+                android:text="Add Todo" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 <!--        <Spinner-->
