--- a/app/src/main/res/layout/fragment_add_todo.xml
+++ b/app/src/main/res/layout/fragment_add_todo.xml
@@ -54,8 +54,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
-                android:onClick="@{()->viewModel.addHandler()}"
-                android:text="Add Todo" />
+                android:onClick="@{()->viewModel.saveHandler()}"
+                android:text="@{viewModel.saveButton,default=`Add Todo`}" />
+
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 <!--        <Spinner-->
