--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,6 +33,7 @@
             android:layout_marginBottom="50dp"
             android:clickable="true"
             android:contentDescription="Add"
+            android:tooltipText="Add Todo"
             android:src="@drawable/ic_baseline_add_24"
             app:backgroundTint="@color/main"
             app:layout_constraintBottom_toBottomOf="parent"
