--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.smdevs.todoapp.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        android:label="Todos"
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_addTodoFragment"
             app:destination="@id/addTodoFragment"
@@ -19,8 +19,8 @@
     <fragment
         android:id="@+id/addTodoFragment"
         android:name="com.smdevs.todoapp.AddTodoFragment"
-        android:label="fragment_add_todo"
-        tools:layout="@layout/fragment_add_todo" >
+        android:label="Add Todo"
+        tools:layout="@layout/fragment_add_todo">
         <action
             android:id="@+id/action_addTodoFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
